<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.fragments.ChooseLevelFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/text_choose_level"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_test_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn_text_test_lvl"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_easy_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#38B13B"
            android:text="@string/btn_text_easy_lvl"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_normal_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FF9800"
            android:text="@string/btn_text_normal_lvl"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_hard_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#F44336"
            android:text="@string/btn_text_hard_lvl"
            android:textAllCaps="true" />
    </LinearLayout>
</layout>